--- a/index.html
+++ b/index.html
@@ -12,47 +12,30 @@
     <title>MobileVPN</title>
 </head>
 <body>
-<header class="header">
-
-</header>
 <main class="main">
         <div class="main__modal modal__window">
             <div class="modal__window-content">
-                <h3 class="modal__window-header">VPN Update</h3>
-                <h4 class="modal__window-body">Please download VPN App to continue watching in safe mode</h4>
-            </div>
-            <button class="modal__window-btn">Install</button>
-        </div>
-        <img class="loader" src="images/load.png" alt="load">
-
-    <div class="control__panel">
-        <div class="progress__bar"></div>
-        <div class="control__panel-inner">
-            <div class="control__pane-left">
-                <div class="control__panel-play">
-                    <i class="fas fa-play"></i>
-                    <i class="fas fa-step-forward"></i>
-                    <i class="fas fa-volume-down"></i>
+                <h3 class="modal__window-header">Mobile VPN - Sеcure Рroxy</h3>
+                <h4 class="modal__window-body">ScoutVPN is a user-friendly app, which lets you surf the Net without any borders
+                </h4>
+                <div class="modal__window-info">
+                    <img class="window__left-img" src="images/logo.png" alt="logo">
+                    <div class="window__right-panel">
+                        <p>QUICK VPN</p>
+                        <p>FROM ANY COUNTRY</p>
+                        <p>SPEEDY CONNECTION</p>
+                    </div>
                 </div>
-                <div class="ytp-time-display time">
-                    <span class="ytp-time-current">0:11</span>
-                    <span class="ytp-time-separator">/</span>
-                    <span class="ytp-time-duration">1:38</span>
-                </div>
+                <h5 class="timer"><span class="minutes">0 </span>minute <span class="seconds">00</span> seconds </h5>
             </div>
-            <div class="control__panel-set">
-                <i class="fas fa-expand"></i>
-                <i class="fas fa-cog"></i>
-
-            </div>
+            <ul class="button-list">
+                <li class="list__item">Install Now</li>
+                <li class="list__item">Cancel</li>
+            </ul>
         </div>
-    </div>
 
 </main>
-
-<footer class="footer"></footer>
-<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <script src="js/index.js"></script>
 </body>
 </html>
