fix timer and font-size

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="main__modal modal__window">
             <div class="modal__window-content">
                 <h3 class="modal__window-header">Mobile VPN - Sеcure Рroxy</h3>
-                <h4 class="modal__window-body">ScoutVPN is a user-friendly app, which lets you surf the Net without any borders
+                <h4 class="modal__window-body">Mobile VPN is a user-friendly app, which lets you surf the Net without any borders
                 </h4>
                 <div class="modal__window-info">
                     <img class="window__left-img" src="images/logo.png" alt="logo">
